7. DisplayMsg, DisplayAlarm 모두 dlg.TopMost = true
8. GUI Form에서 InquireMsg 호출하는 부분 간략화 & teaching form에서 inquire messsage 통일
9. Yaskawa Motion Controll에서 thread 시작시에도 open controller 하도록 추가함

// Version : 0.0.31
// Grade : ★
// Date : 160815~160819
// Context
1. FormTeach class 버그 수정 및 함수 정리 (ex. m_nSelectedPos이 멤버 변수 및 함수 파라미터로 같이 쓰이고 있었음. 에효.)
   nTeachPos -> m_nSelectedPos 으로 변경 및 쓸데없는 함수들 정리함

////////////////////////////////////////////////////////////////////////////////////////////
// LJJ
// Version : 0.0.1
// Grade : ★★
// Date : 2016-03-02
// Context
1. Vision Connect
2. Baumer Dll Copy
3. Simulation Vision Mode 설정

// Version : 0.0.2
// Grade : ★★
// Date : 2016-04-04
// Context
1. Hardware Layer에서 System,Camera,Display 객체 생성
2. MVision의 System,Camera,Display를 RefComp로 연결
3. GenerateErrorCode 생성기능을 적용함. 

// Version : 0.0.3
// Grade : ★
// Date : 2016-04-14 ~2016-04-19
// Context
1. MMeElevator : 초기 Class 제작
2. 이동 및 확인에 검색에 대한 기능 구현

// Version : 0.0.4
// Grade : ★
// Date : 2016-04-19 ~2016-04-20
// Context
1. MMeStage : 초기 Class 제작
2. 이동 및 확인에 검색에 대한 기능 구현
3. Git Update 확인.

// Version : 0.0.5
// Grade : ★
// Date : 2016-04-25 ~2016-04-26
// Context
1. MCtrlLoader : 초기 Class 제작
2. Mechanical Layer에서 상속, 필요 함수 구현

// Version : 0.0.6
// Grade : ★
// Date : 2016-04-26 ~2016-04-29 (27일 ACS 테스트)
//		  2016-05-02 ~2016-05-03
// Context

1. MCtrlStage : 초기 Class 제작
   Mechanical Layer의 MMeStage에서 Align 동영상을 보면서 기능을 추가적으로 삽입 필요
                      MMeVision의 기본 기능 구성
					  MMeElevator 에러 명 변경
2. MMeElevator & MMeStage의 함수 일부 수정(정리)
3. MPosition의 생성자에서 변수 초기화 
4. MCtrlStage의 Vision에서 
	- Calibration 및 연산에 관련 기본 함수들 작성 진행
	- ThetaAlign 동작 및 연산부
	- EdgeAlign Position 위치값 설정 동작 (Next button 기능)
	- 카메라 위치 파악 연산 Calibration

// Version : 0.0.7
// Grade : ★
// Date : 2016-05-09 ~2016-05-11
// Context

1. MCtrlStage의 Vision에서 
	- 카메라 위치 파악 연산 Calibration (Micro)
	- 카메라 위치 설정 (Macro)
	- Edge Align 동작 
	- Macro Align 동작 
	- Micro lign 동작 