@@ -657,9 +657,9 @@ namespace LWDicer.Control
         public int IsElevatorOrignReturn(out bool bStatus)
         {
             bool[] bAxisStatus;
-            m_RefComp.AxElevator.IsOriginReturned(DEF_ALL_COORDINATE, out bStatus, out bAxisStatus);
+            int iResult = m_RefComp.AxElevator.IsOriginReturned(DEF_ALL_COORDINATE, out bStatus, out bAxisStatus);
 
-            return SUCCESS;
+            return iResult;
         }
 
         ////////////////////////////////////////////////////////////////////////
