@@ -940,15 +940,31 @@ namespace LWDicer.Control
             public CParaInfo(string Group = "group", string Name = "parameter", string Unit = "[-]", EUnitType Type = EUnitType.mm)
             {
                 this.Group = Group;
-                this.Name = Name;
-                this.Unit = Unit;
-                this.Type = Type; // temporarily 
+                this.Name  = Name;
+                this.Unit  = Unit;
+                this.Type  = Type; // temporarily 
 
                 for (int i = 0; i < (int)ELanguage.MAX; i++)
                 {
                     DisplayName[i] = MSG_UNDEFINED;
                     Description[i] = MSG_UNDEFINED;
                 }
+            }
+
+            public bool IsEqual(CParaInfo info)
+            {
+                if (this.Group != info.Group) return false;
+                if (this.Name  != info.Name ) return false;
+                if (this.Unit  != info.Unit ) return false;
+                if (this.Type  != info.Type ) return false;
+
+                for (int i = 0; i < (int)ELanguage.MAX; i++)
+                {
+                    if (this.Description[i] != info.Description[i]) return false;
+                    if (this.DisplayName[i] != info.DisplayName[i]) return false;
+                }
+
+                return true;
             }
 
             public string GetDisplayName(DEF_Common.ELanguage lang = DEF_Common.ELanguage.ENGLISH)
@@ -1018,6 +1034,19 @@ namespace LWDicer.Control
                 {
                     Message[i] = MSG_UNDEFINED;
                 }
+            }
+
+            public bool IsEqual(CMessageInfo info)
+            {
+                if (this.Index != info.Index) return false;
+                if (this.Type != info.Type) return false;
+
+                for (int i = 0; i < (int)ELanguage.MAX; i++)
+                {
+                    if (this.Message[i] != info.Message[i]) return false;
+                }
+
+                return true;
             }
 
             public string GetMessage(DEF_Common.ELanguage lang = DEF_Common.ELanguage.ENGLISH)
@@ -1127,6 +1156,22 @@ namespace LWDicer.Control
                     Description[i] = MSG_UNDEFINED;
                     Solution[i] = MSG_UNDEFINED;
                 }
+            }
+
+            public bool IsEqual(CAlarmInfo info)
+            {
+                if (this.Index != info.Index) return false;
+                if (this.Type != info.Type) return false;
+                if (this.Group != info.Group) return false;
+                if (this.Esc != info.Esc) return false;
+
+                for (int i = 0; i < (int)ELanguage.MAX; i++)
+                {
+                    if (this.Description[i] != info.Description[i]) return false;
+                    if (this.Solution[i] != info.Solution[i]) return false;
+                }
+
+                return true;
             }
 
             public string GetAlarmText(DEF_Common.ELanguage lang = DEF_Common.ELanguage.ENGLISH)
